--- a/main.css
+++ b/main.css
@@ -16,14 +16,20 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 15px;
 }
 
 .item {
-  color: white;
   border-radius: 3px;
   text-align: center;
-  background: linear-gradient(134deg, rgba(24, 77, 255, 1) 0%, rgba(176, 36, 255, 0.7) 100%)
+  background: linear-gradient(134deg, rgba(24, 77, 255, 1) 0%, rgba(176, 36, 255, 0.7) 100%);
+  color: white;
+  cursor: pointer;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
 }
 
 /* Liometro */
