--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(7, 1fr) minmax(200px, 1fr);
+  overflow: hidden;
   grid-template-rows: repeat(4, 1fr);
   grid-gap: 15px;
 }
@@ -18,7 +19,6 @@
   text-align: center;
   background: linear-gradient(134deg, rgba(24, 77, 255, 1) 0%, rgba(176, 36, 255, 0.7) 100%);
   color: white;
-  width: 140px;
   height: 140px;
 }
 
@@ -27,38 +27,35 @@
   grid-row: 1 / -1;
   grid-column: -2 / -1;
   background: #003da5;
-  height: 500px;
+  height: 100%;
   position: relative;
 }
 
 #liometer .parent {
   position: relative;
-  left: 80px;
+  left: 148px;
   height: 100%;
   width: 460px;
   -webkit-transform: rotate(270deg);
-     -moz-transform: rotate(270deg);
-      -ms-transform: rotate(270deg);
-       -o-transform: rotate(270deg);
-          transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 
 progress[value] {
   -webkit-appearance: none;
   width: 100%;
-  height: 20px;
+  height: 50px;
 }
 
 progress[value]::-webkit-progress-bar {
   background-color: #eee;
-  border-radius: 10px;
+  border-radius: 50px;
   box-shadow: 0 2px 5px #aaa inset;
 }
 
 progress[value]::-webkit-progress-value {
-  background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(199, 10, 110, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%),
-  -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)),
-  -webkit-linear-gradient(left, #ebf6ff, #ff0012);
-  border-radius: 10px;
-  background-size: 35px 20px, 100% 100%, 100% 100%;
+  background-image: -webkit-linear-gradient(left, #ff6db5, #ff000e);
+  border-radius: 50px;
 }
