--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ body {
 
 #liante {
   display: none;
-  background: url('img/ulisesLiado.png');
+  background: url('img/ulisesliado.png');
   background-size: contain;
   background-repeat: no-repeat;
   position: fixed;
